# video2image

./: CMakeLists.txt  README.md  testRun.bat  video2image.cpp  video2image.cpp.old
testVideo/plane/ImageSets/: plane.txt
